
2009-December-29 Struan Robertson

	* MolecularComponents.h: Minor change to introduce a generic energy transfer model.

_2010_01_08__14_27_52_ Chi-Hsiu Liang

  * Minor modification about the nInfinity in the manual. n > 1.5 changed to n > -1.5.

2010-January-08 Chris Morley

	* src/Reaction.h, src/IrreversibleUnimolecularReaction.cpp,
	src/IrreversibleUnimolecularReaction.h: changes to do with not requiring
	information on the products of irreversible reactions.
	At least, I think they are; they are old mods which didn't get committed.

2010-January-08 Chris Morley

	Save the PersistPtr of source of range variables:
	* src/unitsConversion.cpp, src/unitsConversion.h: store in global vector.
	* src/MicroRate.cpp, src/MolecularComponents.cpp: extra line when 
	range variable is set.
	
	* src/plugins/fitting.cpp: modify output XML file with fitted params;
	 provide extra user control, reduce console output.
	* mesmer1.xsl: Firefox output of fitted params
	* defaults.xml, examples/i-propyl/ipropyl_test.xml,popDiag.xsl:
	consequent changes
	
	* src/oberror.h: RAII class to change error level reporting
	
	* src/Persistence.h, src/XMLPersist.cpp,src/XMLPersist.h: Add two
	new functions XmlMoveToProperty() and XmlWrite()

	* src/ReactionManager.cpp,src/ReactionManager.h,src/System.cpp,src/System.h:
	Move calcChiSquare to System but make new ReactionManager::getSpeciesSequenceIndex().
	Start of rationalization.

2009-December-29 Struan Robertson

	* MolecularComponents.cpp: Minor change needed for i-propyl fitting example.

2009-December-29 Struan Robertson

	* fitting.cpp: Addition of limit checks to line search of fitting method.

2009-December-21 Struan Robertson

	* fitting.cpp: Initial implementation of the Powell algorithm.

2009-December-21 Struan Robertson

	* fitting.cpp: Re-arrangement and tidy-up.

2009-December-13 Struan Robertson

	* fitting.cpp: Generalized line search method to use vectors.

_2009_12_10__16_29_46_ Chi-Hsiu Liang
